Version SVN-5
  * fixed WAV and PCM encoder
  * speedup transcoding
    removed lot's of memory re-/allocations  
  * fixed sleep-bug thanks to Tim Rightnour
  * fixed playlist creation bug thanks again to Tim Rightnour
  * minor fixes

Version SVN-523 2007-09-14
  * AAC/MP4 decoder
  * fixed Deadlock on FreeBSD
  * lame quality configurable
  * id3v1 tag in transcoded files
  * new file settings flag "extract_metadata"
  * fixed segfault in LAME wrapper if id3_tag functions are missing
  * ImageMagick support on windows
  * video transcoding configurable

Version SVN-507 2007-08-29
  * PS3 transcoding
  * include metadata in lame encoded files (id3v2 tag)
  * initial WAV-encoder
  * initial PCM-encoder
  * fixed deadlock on malformed SSDP-messages
    (Thanks to Justin Maggard)
  * "tremor" (integer only vorbis decoder) support
  * initial video transcoding (feature request #1617435)
  * image rescaling (feature request #1656859)
  * vfolder creation speedup
    (patch by Justin Maggard)
  * shared file types completely configurable

Version 0.7.2a-20070529
  * initial support for virtual containers
  * initial UPnP Search support
  * initial support for device specific settings
  * initial ImageMagick support (read image properties)
  * initial ffmpeg support (read video properties)
  * initial XBox 360 support
    (Big thanks to Justin Maggard <jmaggard at users.sourceforge.net>)
  * initial PS3 support
  * initial iTunes.xml support
  * win32 gui (more or less ;))
  
  * split up fuppes (command line) and fuppesd (daemon)
  * support for FLAC >= 1.1.3 (api changed)
  * libiconv optional
  * fixed ip address detection
  * fixed crash if fuppes config is malformed
  * fixed urlencoded form value handling
  * fixed compilation error
	  (implemented detection of second iconv param)
  * HTTP client requests will no longer block the main thread
  * fixed bug #1671132
  * fixed bug #1669624
	  (thanks to Jochen <jochen2 at users.sourceforge.net> and 