@@ -31,7 +31,7 @@
 
 using namespace std;
 
-const std::string NEEDED_CONFIGFILE_VERSION = "0.7.2.2";
+const std::string NEEDED_CONFIGFILE_VERSION = "0.7.2.3";
 
 bool WriteDefaultConfigFile(std::string p_sFileName)
 {
