@@ -73,6 +73,7 @@ class CTranscodingCacheObject
     //int Append(char** p_pszBinBuffer, unsigned int p_nBinBufferSize);
   
     void GetId3v1(char buffer[128]);
+    bool IsMp3Encoding();
   //private:
     unsigned int m_nRefCount;
     
